Altered styling of portfolio cards and edited the descriptions for them as well as fixed general layout issues in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,29 @@ body {
     border-radius: 25px;
 }
 
+.card-img-top {
+    height: 300px !important;
+}
+
+.card-body {
+    height: 325px !important;
+    overflow: auto !important;
+}
+
+.card-body::-webkit-scrollbar {
+    width: 1em;
+}
+  
+.card-body::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+  
+.card-body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+  
 #github {
     border-radius: 40px;
 }
